subaccounts now only enable if they have values and adjust routing = true

--- a/Purchasing.Web/Views/Order/_OrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderDetails.cshtml
@@ -28,7 +28,7 @@
                             <select data-bind="value: account, foreach: $root.accounts" id="Account" name="Account" class="account-number" title="No Account Selected">
                                 <option data-bind="value: id, text: text, attr: { title: title }"></option>
                             </select>
-                            <select data-bind="enable: subAccounts().length > 0, value: subAccount, options: subAccounts, optionsCaption: '--Sub Account--'" name="SubAccount" class="account-subaccount"></select>
+                            <select data-bind="enable: $root.shouldEnableSubAccounts(subAccounts), value: subAccount, options: subAccounts, optionsCaption: '--Sub Account--'" name="SubAccount" class="account-subaccount"></select>
                             <input data-bind="value: project" name="Project" type="text" placeholder="Proj" class="account-projectcode" maxlength="4"/>
                             <img src="@Url.Image("details.png")" class="search-account" style="cursor: pointer;" />
                         </div>
