--- a/Purchasing.Web/Views/Order/_AccountSelectTemplate.cshtml
+++ b/Purchasing.Web/Views/Order/_AccountSelectTemplate.cshtml
@@ -2,7 +2,7 @@
     <select data-bind="foreach: $root.accounts, value: account, splitName: 'Account'" class="account-number" title="No Account Selected">
         <option data-bind="value: id, text: text, attr: { title: title }"></option>
     </select>
-    <select data-bind="enable: subAccounts().length > 0, value: subAccount, splitName: 'SubAccount', options: subAccounts, optionsCaption: '--Sub Account--'" name="SubAccount" class="account-subaccount"></select>
+    <select data-bind="enable: $root.shouldEnableSubAccounts(subAccounts), value: subAccount, splitName: 'SubAccount', options: subAccounts, optionsCaption: '--Sub Account--'" name="SubAccount" class="account-subaccount"></select>
     <input data-bind="value: project, splitName: 'Project'" type="text" placeholder="Proj" class="account-projectcode" maxlength="4"/>
     <span class="ui-state-default ui-corner-all ui-state-hover" style="margin:0.6em 0.1em 0; float: right;">
     <a href="#" class="search-account ui-icon ui-icon-search"></a></span>
