Typo fixes, button placement, hover fix on the account search dialog.

--- a/Purchasing.Web/Views/Order/_AccountSearchDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_AccountSearchDialog.cshtml
@@ -3,7 +3,7 @@
         <section class="section-contents">
             <div class="section-text">
                 <p>
-                    Enter an account name or id and then hit enter (or click the <img src="@Url.Image("details.png")" /> icon).
+                    Enter an account name or ID and then hit enter (or click the <img src="@Url.Image("details.png")" /> icon).
                     Matching accounts from the campus financial system will be displayed. Finally, click 'Select' next to your desired account.
                 </p>    
             </div>
