--- a/Purchasing.Web/Views/Order/_OrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderDetails.cshtml
@@ -29,9 +29,10 @@
                             <select data-bind="value: account, foreach: $root.accounts" id="Account" name="Account" class="account-number" title="No Account Selected">
                                 <option data-bind="value: id, text: text, attr: { title: title }"></option>
                             </select>
+    <span class="ui-state-default ui-corner-all ui-state-hover" style="margin:0 0.1em 0; padding-top: .4em; vertical-align: sub; float: none; width: auto; display: inline;">
+    <a href="#" class="search-account ui-icon ui-icon-search"></a></span>
                             <select data-bind="enable: $root.shouldEnableSubAccounts(subAccounts), value: subAccount, options: subAccounts, optionsCaption: '--Sub Account--'" name="SubAccount" class="account-subaccount"></select>
                             <input data-bind="value: project" name="Project" type="text" placeholder="Proj" class="account-projectcode" maxlength="4"/>
-                            <img src="@Url.Image("details.png")" class="search-account" style="cursor: pointer;" />
                         </div>
 					</div></span>
 				</li>
