--- a/Purchasing.Web/Views/Order/_ReviewSubmit.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewSubmit.cshtml
@@ -7,7 +7,7 @@
         <div class="section-text">
             @if (Model.IsPurchaser)
             {
-                <p>Complete this order by chosing the type of order this request should become and climbing 'Complete'</p>
+                <p>Complete this order by choosing the type of order this request should become and clicking 'Complete'</p>
             }
             else
             {
