--- a/Purchasing.Web/Css/custom.css
+++ b/Purchasing.Web/Css/custom.css
@@ -161,7 +161,7 @@ form input[type='text'].catalog-num { min-width: 0; width: 80px;}
 form input[type='text'].description { min-width: 0; width: 275px;}
 form input[type='text'].price,#shipping, #tax,#freight  { min-width: 0; width: 40px;}
         
-form select.account-subaccount, form select.account-number {min-width: 130px; width: 130px;}
+form select.account-subaccount, form select.account-number {min-width: 120px; width: 120px;}
 form input.account-projectcode {min-width: 80px; width: 80px;}
 
 .account-container, .account-split-amounts {display: inline-block;}
@@ -305,3 +305,8 @@ table.order-split-totals td:last-child {font-weight: bold;}
 
 /* tool tip */
 body .ui-tooltip-default .ui-tooltip-content { background-color: #FFF; border:2px solid #014A81; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;font-size: 1.1em; line-height: 1.5em;font-weight: bold;}
+
+
+
+/* I don't know where this is */
+.ui-dialog-content .ui-state-hover {padding: .4em 1em !important;}
