--- a/Purchasing.Web/Views/Order/_AccountSelectTemplate.cshtml
+++ b/Purchasing.Web/Views/Order/_AccountSelectTemplate.cshtml
@@ -2,8 +2,8 @@
     <select data-bind="foreach: $root.accounts, value: account, splitName: 'Account'" class="account-number" title="No Account Selected">
         <option data-bind="value: id, text: text, attr: { title: title }"></option>
     </select>
+    <span class="ui-state-default ui-corner-all ui-state-hover" style="margin:0 0.1em 0; padding-top: .4em; vertical-align: sub;">
+    <a href="#" class="search-account ui-icon ui-icon-search"></a></span>
     <select data-bind="enable: $root.shouldEnableSubAccounts(subAccounts), value: subAccount, splitName: 'SubAccount', options: subAccounts, optionsCaption: '--Sub Account--'" name="SubAccount" class="account-subaccount"></select>
     <input data-bind="value: project, splitName: 'Project'" type="text" placeholder="Proj" class="account-projectcode" maxlength="4"/>
-    <span class="ui-state-default ui-corner-all ui-state-hover" style="margin:0.6em 0.1em 0; float: right;">
-    <a href="#" class="search-account ui-icon ui-icon-search"></a></span>
 </div>
