--- a/Purchasing.Web/Views/Order/_LineItems.cshtml
+++ b/Purchasing.Web/Views/Order/_LineItems.cshtml
@@ -157,10 +157,10 @@
                 </tr>
                 <tr class="item-footer">
                     <td colspan="5" style="text-align: right;">
-                        Grand Total:
+                        <h3 style="margin-top: .25em;">Grand Total:</h3>
                     </td>
                     <td style="text-align: left;">
-                        <strong><span data-bind="text: grandTotal" id="grandtotal">$0.00</span></strong>
+                        <h2 style="margin-top: .25em;"><strong><span data-bind="text: grandTotal" id="grandtotal">$0.00</span></strong></h2>
                     </td>
                     <td></td>
                 </tr>
