updated wording for enable modification section

--- a/Purchasing.Web/Views/Order/_ItemModificationTemplate.cshtml
+++ b/Purchasing.Web/Views/Order/_ItemModificationTemplate.cshtml
@@ -1,12 +1,15 @@
 ﻿<script id="item-modification-template" type="text/x-jquery-tmpl">
-<section id="item-modification-section">
-	<header class="ui-widget-header ui-corner-top">Line Item And Account Modification</header>
+    <section id="item-modification-section">
+        <header class="ui-widget-header ui-corner-top">Line Item And Account Modification</header>
 
-	<div class="section-contents">
+        <div class="section-contents">
 		
-		<div class="section-text">
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>    
-		</div>
+            <div class="section-text">
+                <p>
+                    If you need to change line item details or account distributions, please press the "Enable Modification" button below.  
+                    Enabling modification will cause the approvals for this order to be recalculated when you save your changes.
+                </p>
+            </div>
 		<div>
 			<ul>
 				<li>
