Renamed menu item. Updated test

--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
                         <li>@Html.ActionLink("Order History", "Index", "Order")</li>
                         @if (roles.Contains(Role.Codes.AdminWorkgroup))
                         {
-                            <li>@Html.ActionLink("Administrative Orders", "AdminOrders", "Order")</li>    
+                            <li>@Html.ActionLink("Admin Order History", "AdminOrders", "Order")</li>    
                         }
                     </ul>
                 
