added a "quick" script to make the radio buttons do what they are supposed to do on the order page, but @srkirkland needs to wire them up correctly, ie, make the split radio actually activate the split.  and it needs to be put into a proper script file.

--- a/Purchasing.Web/Views/Order/Request.cshtml
+++ b/Purchasing.Web/Views/Order/Request.cshtml
@@ -20,7 +20,36 @@
             purchasing.init();
             
             purchasing.initLocalStorage();
+
+            attachSelectAccountEvents();
         });
+
+        function attachSelectAccountEvents() {
+            $(".details-option").change(function() {
+
+                // hide all the controls
+                $("#account-form").hide();
+                $("#account-manager").hide();
+                $("#order-split").hide();
+                
+                // reset the values of the controls inside
+                $("#account-form").find("input, select").val("");
+                $("#account-manager").find("select").val("");
+
+                var ctl = $(this).find("input");
+
+                if (ctl.val() == "account") {
+                    $("#account-form").show();
+                }
+                if (ctl.val() == "approver") {
+                    $("#account-manager").show();
+                }
+                if (ctl.val() == "split") {
+                    $("#order-split").show();
+                }
+
+            });
+        }
 
     </script>
 }
