--- a/Purchasing.Web/Views/Workgroup/_NewWorkgroupVendor.cshtml
+++ b/Purchasing.Web/Views/Workgroup/_NewWorkgroupVendor.cshtml
@@ -31,7 +31,7 @@
 					<div class="editor-field">
 						@Html.EditorFor(model => model.WorkgroupVendor.Name)
 						@Html.ValidationMessageFor(model => model.WorkgroupVendor.Name)
-                        <span id="loader" style="display: none;"><img src='@Url.Image("ajax-loader.gif")'/></span>
+                        <span id="loader-name" style="display: none;"><img src='@Url.Image("ajax-loader.gif")'/></span>
                         <span id="duplicateCheck" class="red bold"></span>
 					</div>
 				</li>
@@ -43,6 +43,7 @@
 					<div class="editor-field">
 						@Html.EditorFor(model => model.WorkgroupVendor.Line1)
 						@Html.ValidationMessageFor(model => model.WorkgroupVendor.Line1)
+                        <span id="loader-line1" style="display: none;"><img src='@Url.Image("ajax-loader.gif")'/></span>
 					</div>
 				</li>
 		
