--- a/Purchasing.Web/Views/Wizard/AddNewVendor.cshtml
+++ b/Purchasing.Web/Views/Wizard/AddNewVendor.cshtml
@@ -9,14 +9,45 @@
     ViewBag.IsAdministrative = Model.WorkgroupVendor.Workgroup.Administrative;
     ViewBag.IsAccountSync = Model.WorkgroupVendor.Workgroup.SyncAccounts;
 }
+@section AdditionalScripts
+{
+    <script type="text/javascript">
+        $(function () {
+            $("#WorkgroupVendor_Name").change(function () {
+                checkDuplicates($("#loader-name"));
+            });
+            $("#WorkgroupVendor_Line1").change(function () {
+                checkDuplicates($("#loader-line1"));
+            });
+        });
+
+        function checkDuplicates(loader) {
+            var id = '@Model.WorkgroupVendor.Workgroup.Id';
+            var name = $("#WorkgroupVendor_Name").val();
+            var line1 = $("#WorkgroupVendor_Line1").val();
+            var url = '@Url.Action("CheckDuplicateVendor", "Workgroup")';
+            loader.toggle();
+            $.get(url, { workgrougpId: id, name: name, line1: line1 }, function (result) {
+                loader.toggle();
+                if (result) {
+                    $("#duplicateCheck").html(result.message);
+                } else {
+                    alert("There was a problem checking for duplicate vendors");
+                }
+            });
+        }
+    </script>
+}
 
 
     @Html.Partial("_StatusBar", Model.WorkgroupVendor.Workgroup.Id)
     
     @{
         var helpText = "To add a non KFS vendor enter the fields below.</br></br>" +
-            "<strong>If a non-KFS Vendor is used for an order that goes through KFS, it will have to be added to that system.</strong>";
+                       "<strong>If a non-KFS Vendor is used for an order that goes through KFS, it will have to be added to that system.</strong>";
     }
+    
+
 
 @using (Html.BeginForm())
 {
@@ -42,6 +73,8 @@
 					<div class="editor-field">
 						@Html.EditorFor(model => model.WorkgroupVendor.Name)
 						@Html.ValidationMessageFor(model => model.WorkgroupVendor.Name)
+                        <span id="loader-name" style="display: none;"><img src='@Url.Image("ajax-loader.gif")'/></span>
+                        <span id="duplicateCheck" class="red bold"></span>
 					</div>
 				</li>
 		
@@ -52,6 +85,7 @@
 					<div class="editor-field">
 						@Html.EditorFor(model => model.WorkgroupVendor.Line1)
 						@Html.ValidationMessageFor(model => model.WorkgroupVendor.Line1)
+                        <span id="loader-line1" style="display: none;"><img src='@Url.Image("ajax-loader.gif")'/></span>
 					</div>
 				</li>
 		
