added duplicate vendor check to order page

--- a/Purchasing.Web/Views/Order/_Options.cshtml
+++ b/Purchasing.Web/Views/Order/_Options.cshtml
@@ -9,6 +9,7 @@ purchasing.options({
     KfsSearchSubAccountsUrl: '@Url.Action("SearchSubAccounts", "Accounts")',
     AddKfsVendorUrl: '@Url.Action("AddKfsVendor", "WorkgroupVendor", new { id = Model.Workgroup.Id })',
     SearchVendorUrl: '@Url.Action("SearchVendor", "WorkgroupVendor")',
+    CheckDuplicateVendorUrl: '@Url.Action("CheckDuplicateVendor", "Workgroup")',
     SearchVendorAddressUrl: '@Url.Action("SearchVendorAddress", "WorkgroupVendor")',
     SearchCommodityCodeUrl: '@Url.Action("SearchCommodityCodes")',
     SearchBuildingUrl : '@Url.Action("SearchBuilding")',
