updated workgroup address to show display name for easier distinction

--- a/Purchasing.Web/Views/Order/_ShippingAddress.cshtml
+++ b/Purchasing.Web/Views/Order/_ShippingAddress.cshtml
@@ -33,7 +33,7 @@
 
         <li><div class="editor-label required">Address: <span class="required">*</span></div>
             <div class="editor-field">
-                @this.Select("shipAddress").Options(Model.Addresses, x=>x.Id,x=>x.Name).Class("required").FirstOption("-- Select an address --").Selected(Model.Order.Address != null ? Model.Order.Address.Id : 0)
+                @this.Select("shipAddress").Options(Model.Addresses, x=>x.Id,x=>x.DisplayName).Class("required").FirstOption("-- Select an address --").Selected(Model.Order.Address != null ? Model.Order.Address.Id : 0)
                 <span class="field-validation-valid" data-valmsg-for="shipAddress" data-valmsg-replace="true"></span>
                 (or)
                 <a id="add-address" class="button" href="#">Add new Shipping Address</a>
