--- a/Purchasing.Web/Views/Search/Index.cshtml
+++ b/Purchasing.Web/Views/Search/Index.cshtml
@@ -24,10 +24,9 @@
 <section class="display-form">
     <header class="ui-corner-all ui-widget-header">Search tips!</header>
     <ul>
-        <li>Blah blah blah</li>
-        <li>Blah blah blah</li>
-        <li>Blah blah blah</li>
-        <li>Blah blah blah</li>
+        <li>Use normal 'google' type search queries, keep your searches short to get relevant results (ex: 'beakers' or 'lab coats')</li>
+        <li>Searches on Order (justification, delivery info, request number) and Line Items (line description, url, notes, catalog and commodity numbers)</li>
+        <li>Also returns Order Comment text and "Custom Field" text</li>
     </ul>
     
 </section>
