fixes problems where an account is entered correctly to add it to a workgroup, but the account was not selected with the autocomplete script.

--- a/Purchasing.Web/Views/Workgroup/AddAccount.cshtml
+++ b/Purchasing.Web/Views/Workgroup/AddAccount.cshtml
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         $(function () {
 
-            $("#account-search").autocomplete({
+            $("#account_search").autocomplete({
 
                 source: function (request, response) {
 
