--- a/Purchasing.Web/Views/Order/Request.cshtml
+++ b/Purchasing.Web/Views/Order/Request.cshtml
@@ -23,7 +23,35 @@
         });
 
     </script>
+    
+    
+    <!-- Experimental code for performing database saves -->
+    <script type="text/javascript">
+
+        $(function () {
+
+            $("#save-btn").click(function () {
+
+                var url = '@Url.Action("SaveOrderRequest")';
+                var formData = $("#order-form").serialize();
+                var saveId = $("#saveId").data("save-id");
+
+                $.post(url, { saveId: saveId, formData: formData }, function (result) {
+                    $("saveId").data("save-id", result);
+                });
+
+            });
+
+
+
+        });
+
+    </script>
+
 }
+
+<input type="button" class="button" value="Save" id="save-btn"/>
+<span id="saveId"></span>
 
 @Html.Partial("_SideNavigation")
 
