--- a/Purchasing.Web/Views/Order/Request.cshtml
+++ b/Purchasing.Web/Views/Order/Request.cshtml
@@ -35,8 +35,9 @@
                 var url = '@Url.Action("SaveOrderRequest")';
                 var formData = $("#order-form").serialize();
                 var saveId = $("#saveId").data("save-id");
+                var token = $("input[name='__RequestVerificationToken']").val();
 
-                $.post(url, { saveId: saveId, formData: formData }, function (result) {
+                $.post(url, { saveId: saveId, formData: formData, __RequestVerificationToken: token }, function (result) {
                     $("saveId").data("save-id", result);
                 });
 
