changed searchbox to text + submit button, in a form.

--- a/Purchasing.Web/Views/Search/Index.cshtml
+++ b/Purchasing.Web/Views/Search/Index.cshtml
@@ -9,7 +9,7 @@
      h2 {margin-bottom: 0px;}
     #body form {text-align: center;}
     .searchbox {width: 50%; font-size: 1.75em; padding: 10px 15px; margin-top: -.5em; margin-bottom: 1em;}
-    .ui-button {font-size: 1.75em !important;}
+    .searchbutton {font-size: 1.75em !important;}
     </style>
 
 }
@@ -17,7 +17,7 @@
 @using (Html.BeginForm("Results", "Search", FormMethod.Get))
 {
     <input type="search" id="query" name="q" placeholder="Enter search term" class="searchbox" />
-    <input type="submit" class="button" value="Go!"/>
+    <input type="submit" class="button searchbutton" value="Go!"/>
 }
 
 <br />
