--- a/Purchasing.Web/Views/Wizard/CreateWorkgroup.cshtml
+++ b/Purchasing.Web/Views/Wizard/CreateWorkgroup.cshtml
@@ -72,7 +72,7 @@
                         @Html.LabelFor(model => model.Workgroup.Administrative)
                     </div>
                     <div class="editor-field">
-                        <span class="showTip" title="Administrative workgroups can see other workgroups withing the same primary organization.">@Html.EditorFor(model => model.Workgroup.Administrative)</span>
+                        <span class="showTip" title="Administrative workgroups can see other workgroups within its own organizations.">@Html.EditorFor(model => model.Workgroup.Administrative)</span>
                         @Html.ValidationMessageFor(model => model.Workgroup.Administrative)
                     </div>
                 </li>
@@ -81,7 +81,7 @@
                         @Html.LabelFor(model => model.Workgroup.SharedOrCluster)
                     </div>
                     <div class="editor-field">
-                        @Html.EditorFor(model => model.Workgroup.SharedOrCluster)
+                        <span class="showTip" title="Only allows Approvers/Account Managers/Purchasers.  All standard workgroups below the specified org show up on landing page, and users in this workgroup will receive emails when order requests arrive for each role. If shared/cluster, must also be administrative.">@Html.EditorFor(model => model.Workgroup.SharedOrCluster)</span>
                         @Html.ValidationMessageFor(model => model.Workgroup.SharedOrCluster)
                     </div>
                 </li>
