--- a/Purchasing.Web/Views/User/ColumnPreferences.cshtml
+++ b/Purchasing.Web/Views/User/ColumnPreferences.cshtml
@@ -137,6 +137,15 @@
                 </li>
                 <li>
                     <div class="editor-label">
+                        @Html.LabelFor(model => model.ShowAccountAndSubAccount) 
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.ShowAccountAndSubAccount)
+                        @Html.ValidationMessageFor(model => model.ShowAccountAndSubAccount)
+                    </div>
+                </li>
+                <li>
+                    <div class="editor-label">
                         @Html.LabelFor(model => model.ShowShipTo) 
                     </div>
                     <div class="editor-field">
