DB update and wip order received

--- a/Purchasing.Web/Views/Order/_OrdersTable.cshtml
+++ b/Purchasing.Web/Views/Order/_OrdersTable.cshtml
@@ -318,6 +318,22 @@
             result.Append(localString);
         }
     }
+
+    //if(Model.ColumnPreferences.ShowOrderReceived)
+    //{
+    //    if(tableHeader)
+    //    {
+    //        result.Append("<th>Received</th>");
+    //    }
+    //    if(item.Order.OrderReceived)
+    //    {
+    //        result.Append("<td>Yes</td>");
+    //    }
+    //    else
+    //    {
+    //        result.Append("<td>No</td>");
+    //    }
+    //}
    
     @Html.Raw(result.ToString())
    
